# D-FAST_Morphological_Impact

./: .gitignore  BuildDfastmi.bat  CopyDutchRiversFile.bat  CopyLanguageFile.bat  CopyProjDirectory.bat  CopyUserManualFile.bat  PostBuild.bat  README.md  build_dfastmi.bat  pyproject.toml  setup.py
.github/workflows/: formatting.yml  sigrid-publish.yml  sigrid-pullrequest.yml
BuildScripts/: BuildDfastmi.bat  BuildDfastmi_no_command_window.bat  Collect_Examples.bat  CondaInstall.bat  CopyDutchRiversFile.bat  CopyFionaLibsDirectory.bat  CopyGeoPandasDataSetDirectory.bat  CopyLanguageFile.bat  CopyMatPlotLibLibsDirectory.bat  CopyNetCDF4LibsDirectory.bat  CopyProjDirectory.bat  CopyShapelyLibsDirectory.bat  CopyUserManualFile.bat  DevelopDfastmi.bat  PostBuild.bat  VSCodeInstall.bat
dfastmi/: BedLevelCalculator.py  Dutch_rivers.ini  Dutch_rivers_v1.ini  Dutch_rivers_v2.ini  Dutch_rivers_v3.ini  RiversObject.py  __init__.py  __main__.py  batch.py  cli.py  cmd.py  gui.py  io.py  kernel.py  messages.NL.ini  messages.UK.ini  plotting.py  resources.py  src.pyproj
dfastmi/batch/: AConfigurationChecker.py  AConfigurationInitializerBase.py  AFileNameRetriever.py  AnalyserAndReporterDflowfm.py  AnalyserAndReporterWaqua.py  AnalyserDflowfm.py  AnalyserWaqua.py  AreaDetector.py  AreaPlotter.py  ConfigurationChecker.py  ConfigurationCheckerFactory.py  ConfigurationCheckerLegacy.py  ConfigurationCheckerValidator.py  ConfigurationInitializer.py  ConfigurationInitializerFactory.py  ConfigurationInitializerLegacy.py  DFastUtils.py  DetectAndPlot.py  DflowfmLoggers.py  DflowfmReporters.py  Distance.py  Face.py  FileNameRetriever.py  FileNameRetrieverFactory.py  FileNameRetrieverLegacy.py  FileNameRetrieverUnsupported.py  OutputDataDflowfm.py  OutputDataWaqua.py  PlotOptions.py  Projection.py  ReportData.py  ReporterDflowfm.py  ReporterWaqua.py  SedimentationData.py  SedimentationVolume.py  XykmData.py  XyzFileWriter.py  core.py  detect_areas.py  plotting.py  (+2 more)
dfastmi/batch_dir/: AnalyserAndReporterDflowfm.py  ConfigurationChecker.py  DetectAndPlot.py  FileNameRetriever.py
dfastmi/config/: AConfigurationChecker.py  AConfigurationInitializerBase.py  ConfigFileOperations.py  ConfigurationChecker.py  ConfigurationCheckerFactory.py  ConfigurationCheckerLegacy.py  ConfigurationCheckerValidator.py  ConfigurationInitializer.py  ConfigurationInitializerFactory.py  ConfigurationInitializerLegacy.py
dfastmi/gui/: dialog_model.py  dialog_utils.py  dialog_view.py  dialog_view_model.py  gui_tools.py  qt_tools.py
dfastmi/io/: AReach.py  ApplicationSettingsHelper.py  Branch.py  CelerObject.py  ConfigBooleans.py  ConfigFileOperations.py  ConfigProcessor.py  DFastAnalysisConfigFileParser.py  DFastMIConfigParser.py  DFastRiverConfigFileParser.py  DataTextFileOperations.py  FileUtils.py  FouFile.py  GridOperations.py  IBranch.py  IReach.py  MapFile.py  ObservableList.py  OutputFile.py  OutputFileFactory.py  Reach.py  ReachLegacy.py  RiverConfigElementProcessor.py  RiverParameterData.py  RiversObject.py  map_file.py
dfastmi/kernel/: BedLevelCalculator.py  core.py  legacy.py  typehints.py
dfastrbk/docs/: rapport.tex
dfastrbk/src/: __main__.py  cmd.py  config.py  ship_dimensions.ini
docs/: deltares_manual.cls  dfastmi.bib  dfastmi.tcp  dfastmi_design.tcp  dfastmi_designdoc.tex  dfastmi_release_notes.tex  dfastmi_techref.tcp  dfastmi_techref.tex  dfastmi_usermanual.tex  dfastmi_validation.tcp  dfastmi_validation.tex  techref.md
docs/chapters/: application.tex  backward_compatibility.tex  code_structure.tex  conceptual_description.tex  description.tex  developer_guide.tex  example.tex  file_formats.tex  get_started.tex  guidance.tex  intro.tex  intro_tech.tex  requirements.tex  sim2ugrid.tex  software_maintenance.tex  testing.tex  usage.tex  validation_against_morphology.tex  validation_backward_compatibility.tex  validation_conclusion.tex  validation_introduction.tex  validation_verschilanalyse.tex
docs/figures/: GendtseWaard_v3_yearavg.qpses  Grensmaas_v3_yearavg.qpses  Grensmaas_v3_yearavg_6_levels.qpses  Grensmaas_v3_yearavg_9_levels.qpses  Lymen_v3_yearavg.qpses  Palmerswaard_dfastmi.qpses  (+10 more)
src/: dfastmi.py  dfastmi_cli.py  dfastmi_cmd.py  dfastmi_gui.py  dfastmi_io.py  dfastmi_kernel.py  messages.NL.ini  rivers.ini  src.pyproj
tests/: context.py  test_DataAccess_batch.py  test_batch.py  test_cli.py  test_io.py  test_kernel.py  test_riversobject.py
tests-dist/: test_basic.py  test_batch.py  test_cli.py  test_files.py
(+216 files in other folders)
