[tool.poetry]
name = "d-fast_morphological_impact"
version = "2.0.8"
description = "A tool to perform a morphological impact analysis based on a number of D-Flow FM simulations."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "^1.24.1"
netCDF4 = "^1.6.2"
Fiona = "^1.8.22"
pandas = "^1.5.2"
pyproj = "3.4.1"
PyQt5 = "*"
PyQt5-Qt5 = {version = "^5.15,!=5.15.11,!=5.15.12"}
ordered-set = "^4.1.0"
cftime = "1.3.0"
tbb = "2021.7.1"
mkl = "2021.4.0"
geopandas = "^0.12.2"
matplotlib = "^3.6.3"
shapely = "^2.0.2"

[tool.poetry.group.dev.dependencies]
Nuitka = "1.3.8"
pytest = "^7.2.1"
black = "^22.12.0"
teamcity-messages = "^1.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
