[tool.poetry]
name = "dfastmi"
version = "2.0.8"
description = "A tool to perform a morphological impact analysis based on a number of D-Flow FM simulations."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "^1.24.1"
netCDF4 = "^1.6.2"
Fiona = "1.10.0"
pandas = "^1.5.2"
pyproj = "^3.4.1"
PyQt5 = "5.15.7"
PyQt5-Qt5 = "5.15.2"
ordered-set = "^4.1.0"
cftime = "1.3.0"
tbb = "2021.7.1"
mkl = "2021.4.0"
geopandas = "^1.0.0"
matplotlib = "^3.6.3"
shapely = "^2.0.2"
pydantic = "^2.6.0"
mypy = "^1.10.1"
coverage = "7.4.4"
d-fast-io = { git = "https://github.com/Deltares/D-FAST_Commons.git", tag = "0.1.0-alpha.1" }

[tool.poetry.group.dev.dependencies]
Nuitka = "^1.3.8"
imageio = "^2.33.1"
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.0"
pytest-qt = "^4.4.0"
teamcity-messages = "^1.32"
mock = "^5.1.0"
black = "^24.2.0"
isort = "^5.13.2"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.coverage.run]
source = ["dfastmi"]

[tool.pytest.ini_options]
addopts = [ "--ignore=tests-dist",
            "--cov",
            "--cov-report=term",
            "--cov-report=html",
            "--cov-report=xml:coverage-reports/coverage.xml",
]
testpaths="tests"
python_functions=["given_*",
                    "Given_*",
                    "test_*",
                    "Test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
